# gh-aw-ext

./: README.md  pyproject.toml
actions/dispatch-repair/: action.yml
actions/patch-lockfiles/: action.yml
actions/redact-artifacts/: action.yml
docs/: custom-endpoint-runbook.md
examples/: daily-repo-status.md  repair-dispatch.yml  validate-gh-aw-lockfiles.yml
src/gh_aw_ext/: __init__.py  cli.py  patcher.py  redact.py  repair.py  snippets.py
src/gh_aw_priv/: __init__.py  cli.py  compile.py  patcher.py
tests/: test_compile.py  test_patcher.py  test_redact.py
