[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-aw-ext"
version = "0.1.0"
description = "gh-aw extension helpers for Codex workflows with secret-backed endpoints."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gh-aw-ext = "gh_aw_ext.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
